# emile-mini

./: .gitignore  CHANGELOG.md  MANIFEST.in  MULTIMODAL_IMPLEMENTATION.md  README.md  emile_cognitive_battery_episodes.csv  examples_multimodal.py  fruit_categorization_experiment.py  maze_environment.py  nav_report_results.csv  nav_report_summary.json  pyproject.toml  test_multimodal.py  test_version.py
docs/: qse_emile_demonstration_report.txt
emile_mini/: __init__.py  __main__.py  agent.py  analyze_qse_dynamics.py  autopoietic_validation_suite_v4.py  basic_sim.py  cli.py  code_analyzer2.py  cognitive_battery.py  complete_navigation_system_d.py  complete_navigation_system_e.py  config.py  context.py  embodied_qse_emile.py  extinction_experiment.py  goal.py  maze_comparison.py  maze_environment.py  memory.py  multimodal.py  nav_env_gym.py  nav_report.py  ppo_nav_baseline.py  qse_agent_dynamics_runner.py  qse_core.py  qse_core_metric_runner_c.py  real_qse_autopoietic_validation.py  real_qse_validation_existing_tools.py  simulator.py  social_qse_agent_v2.py  symbolic.py  test_cognitive_only.py  visual_maze_demo.py  viz.py
emile_mini.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: advanced_experimental_suite.py  audit_emile_mini.py  code_analyzer.py  cognitive_story.py  complete_demo_suite.py  comprehensive_runner.py  concise_analyzer.py  definitive_validation.py  experiment_runner.py  extinction_experiment.py.backup  fruit_categorization_experiment.py  main.py.backup  maze_comparison.py  run_experiments.py.backup  (+2 more)
sample_data/: pyproject.toml
(+3 files in other folders)
