[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emile-mini"
version = "0.5.0"
description = "Émile-mini: a lite emergent interactive learner (mini)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="You", email="del.coburn@mail.utoronto.ca"}]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/baglecake/emile-mini"
Issues = "https://github.com/baglecake/emile-mini/issues"

[project.scripts]
emile-mini = "emile_mini.cli:main"
emile-validate = "emile_mini.real_qse_validation_existing_tools:main"
emile-battery  = "emile_mini.cognitive_battery:main"


[tool.setuptools.packages.find]
include = ["emile_mini*"]
exclude = ["tests*"]
