[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emile-mini"
version = "0.1.0"
description = "Émile-mini: emergent QSE-based embodied and social agents (mini)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="You", email="you@example.com"}]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/yourname/emile-mini"
Issues = "https://github.com/yourname/emile-mini/issues"

[project.scripts]
emile-mini = "emile_mini.cli:main"

[tool.setuptools.packages.find]
include = ["emile_mini*"]
exclude = ["tests*"]
